--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>HomeHub</title>
+    <title>Homehub</title>
   </head>
   <body>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDP7ZDv6xGzfVe7y7Sgb3MsYMqCVLNljeY&libraries=geometry,drawing,places"></script>
